fix padding on inner page secondary collapsed menu

--- a/development/terminalfour/src/sass/ContentTypes/_navmenu.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_navmenu.scss
@@ -30,7 +30,7 @@
   color:black;
   font-size:1.2rem;
   font-weight:700;
-  padding: 15px 0px;
+  padding: 15px 0px 0px 15px;
   line-height: 1em;
   display: block;
   line-height: 1em;
@@ -194,6 +194,7 @@
     font-weight: normal;
     text-decoration: inherit;
     float: right;
+    padding-right: 15px;
   }
 
 @media (max-width: 767px) {
